--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.4.0",
     "next": "^13.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "20.11.0",
+    "@types/react": "18.2.47",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
